--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        pg-version: ['12', '13', '14', '15', '16']
+        pg-version: ['12', '13', '14', '15', '16', '17']
 
     steps:
       - uses: actions/checkout@v4
