--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,3 +44,19 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           files: ./coverage.info
+
+
+  style:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
+      - name: Run style check
+        run: nix-shell --run "nxpg-style-check"
